# drawmepix

./: .gitignore  Cargo.toml  LICENSE  readme.md  updates.md
.github/workflows/: release.yml
src/: font.rs  main.rs
