[package]
name = "pixel-project"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.28"
gif = "0.14.2"
image = "0.25.10"
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"


self_update = { version = "0.41", features = ["archive-tar", "compression-flate2"] }